<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:id="@+id/content_menu">

        <item
            android:id="@+id/menu_edit_profile"
            android:icon="@drawable/ic_profile_setting"
            android:title="@string/edit_profile" />

        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>

    <group android:id="@+id/dev_app_menu">

        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

        <item
            android:id="@+id/menu_bugReport"
            android:icon="@drawable/ic_bug_report"
            android:title="@string/bug_report" />

        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_info"
            android:title="@string/dev_info" />

    </group>


</menu>