<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="-20dp"
    android:padding="16dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvError"
                style="@style/SecondaryAppCompatTextViewExtraSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descLayout"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/sample_name"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmit"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descLayout"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:text="@string/submit"
                android:textSize="18sp"
                app:cornerRadius="25dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/locationLayout"
                android:layout_margin="8dp"
                android:hint="@string/select_category"
                android:soundEffectsEnabled="false">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etCategory"
                    style="@style/EditProfileET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryLayout"
                android:layout_margin="8dp"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDesc"
                    style="@style/EditProfileET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLines="12"
                    android:minLines="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameLayout"
                android:layout_margin="8dp"
                android:hint="@string/enter_place">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLocation"
                    style="@style/EditProfileET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    style="@style/EditProfileET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>