<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ApplicationActivity">

    <RelativeLayout
        android:id="@+id/data"
        android:layout_below="@id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/select_category"
            android:soundEffectsEnabled="false">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/etCategory"
                style="@style/EditProfileET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/categoryLayout"
            android:layout_margin="8dp"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDesc"
                style="@style/EditProfileET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:maxLines="12"
                android:minLines="4" />

        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>
<!--
    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@id/data"/>-->


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/submit"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/data"
        android:layout_margin="8dp"
        android:background="@color/colorGreyLight"
        android:src="@drawable/ic_add" />


</RelativeLayout>